@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $NetBSD: ns-open,v 1.12 2004/02/14 01:03:29 grant Exp $
+# $NetBSD: ns-open,v 1.13 2005/03/23 11:40:34 abs Exp $
 #
 # Simple script to open a URL in Netscape, starting a new process if necessary
 # If a netscape process is not running it will look for a valid netscape
@@ -8,7 +8,7 @@
 # overridden by the user in the environment.
 
 if [ -z "$NETSCAPE_PREFERRED" ]; then
-    NETSCAPE_PREFERRED=netscape7:communicator:navigator:mozilla:firefox:mozilla-netbsd:mozilla-linux:mozilla-solaris:firefox-netbsd:firefox-gtk2-linux:firefox-linux:firefox-solaris
+    NETSCAPE_PREFERRED=netscape7:firefox:mozilla:communicator:navigator:mozilla-netbsd:mozilla-linux:mozilla-solaris:firefox-netbsd:firefox-gtk2-linux:firefox-linux:firefox-solaris
 fi
 
 # Locate appropriate netscape binary and set NETSCAPE_BIN
@@ -79,7 +79,7 @@ if [ -z "$START_NEW_NETSCAPE" ];then
 	if [ -z "$URL" ];then
 	    URL=about:blank
 	fi
-	NS_REMOTE_ARGS="$NS_REMOTE_ARGS -remote openURL(${URL},new-window)"
+	NS_REMOTE_ARGS="$NS_REMOTE_ARGS -remote openURL(${URL})"
     fi
     if ns-remote -noraise 2>/dev/null; then
         if ns-remote $NS_REMOTE_ARGS ; then
