@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.9573 2005/03/23 10:54:38 jmmv Exp $
+$NetBSD: CHANGES,v 1.9574 2005/03/23 11:41:06 abs Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -1585,3 +1585,5 @@ Changes to the packages collection and infrastructure in 2005:
 	Removed rox-base [rxg 2005-03-23]
 	Updated suse91_base to 9.1nb5 [tron 2005-03-23]
 	Updated libopendaap to 0.3.0nb1 [jmmv 2005-03-23]
+	Updated ns-remote to 1.10 [abs 2005-03-23]
+
